public/style.css
/*
--- 01 Typography system

--- 02 Colors

Primary: #555
Tints:
Shades:
Accents:
Greys:#333,#444,#555

*/

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

body {
  font-family: sans-serif;
  line-height: 1;
  font-weight: 400;
  color: #555;
  position: relative;
}

a {
  text-decoration: none;
}

label {
  display: block;
}

nav a {
  display: inline-block;
  margin: 1em;
}

form div {
  margin: 1em;
  display: inline-block;
}

.logo-panel {
  left: 1rem;
  top: 1rem;
  width: 100%;
  max-width: 24rem;
  height: 2rem;
  position: absolute;
  background-color: white;
  color: #333;
  font-weight: 800;
  text-align: center;
  font-size: 2rem;
  filter: drop-shadow(0 0 0.5rem rgb(200, 200, 200));
}

.import-img-panel {
  border-radius: 15px;
  width: 15rem;
  position: fixed;
  left: 1rem;
  top: 10rem;
  filter: drop-shadow(0 0 0.5rem rgb(200, 200, 200));
}

.edit-image {
  position: absolute;
  width: 20rem;
  right: -3rem;
  top: 10rem;
}
.edit-img-panel {
  border-radius: 15px;
  width: 15rem;
  filter: drop-shadow(0 0 0.5rem rgb(200, 200, 200));
}

#my_file {
  display: none;
}

.imported_image {
  border: solid 1px #333;
  width: 3rem;
  height: 3rem;
}

#main_canvas {
  border-radius: 10px;
  width: 40rem;
  height: 40rem;
  background-color: white;
  position: fixed;
  z-index: -1;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -60%);
  filter: drop-shadow(0 0 0.5rem rgb(200, 200, 200));
}

#tempCanvas {
  display: none;
}

.layerImage {
  background-color: #555;
}

.generate_image_panel {
  border-radius: 15px;
  width: 68rem;
  height: 8rem;
  background-color: rgba(223, 223, 223, 0.5);
  position: fixed;
  bottom: 1rem;
  left: 50%;
  transform: translate(-50%, 0);
}

#generate_btn {
  position: fixed;
  top: -2rem;
  left: 0;
}

.generate-image-main-content {
  display: flex;
  overflow-x: auto;
}

